--- a/pages/blog/test1.mdx
+++ b/pages/blog/test1.mdx
@@ -4,6 +4,7 @@ date: Fri Feb 28 2020 20:16:31 GMT-0800 (Pacific Standard Time)
 tags: [actionhero, code, javascript]
 featured: false
 canonical: null
+image: https://cdn-images-1.medium.com/max/3840/1*xttMYnX-HSXA2VFjXiS_Tw.png
 ---
 
 Thank you to everyone who took out 2020 developer survey!
