--- a/pages/blog/2019-09-13-using-next-js-for-static-sites.mdx
+++ b/pages/blog/2019-09-13-using-next-js-for-static-sites.mdx
@@ -5,8 +5,9 @@ title: >-
 description: >-
   Use tools like Circle.Ci, Github, and Next.JS to host production-grade
   websites for free!
+image: /images/medium-export/1__SWbmOATNSu__AnPWW__DKeLw.jpeg
 date: "2019-09-13T17:22:55.993Z"
-tags: []
+tags: ["next.js", "javascript", "node.js"]
 # slug: >-
 #  /@evantahler/using-next-js-to-build-static-dynamic-websites-and-never-pay-for-font-end-hosting-again-8f058cc2d3a3
 ---
