--- a/pages/blog/2019-09-30-actionhero-for-real-time-games.mdx
+++ b/pages/blog/2019-09-30-actionhero-for-real-time-games.mdx
@@ -2,7 +2,8 @@
 title: Actionhero for Real-time Games — The Illustrated Actionhero Community Q&A
 description: Introducing to the Actionhero Illustrated Community Q&A!
 date: "2019-09-30T17:30:35.077Z"
-tags: []
+tags: ["actionhero", "nodejs", "javascript", "typescript"]
+image: /images/medium-export/1__fpDBDrYAMXpsSd7Ooykw6A.png
 # slug: >-
 #  /@evantahler/actionhero-for-real-time-games-the-illustrated-actionhero-community-q-a-44c138e840e
 ---
@@ -13,7 +14,7 @@ tags: []
 
 Welcome to the first edition of the `Actionhero Illustrated Community Q&A`!
 
-The`Actionhero Illustrated Community Q&A` is a new project whose goal is to capture some of the best questions and answers from the Actionhero Slack group and share them with the world. For those of you who don't know, Actionhero is a [Node.js](https://medium.com/u/96cd9a1fb56) server framework focused on mutli-transport reusability, real-time chat and gaming, background jobs, etc. Actionhero includes many of the components mature digital products need out of the box so you don't have to reinvent them yourself. You can learn more about Actionhero at [www.actionherojs.com](http://www.actionherojs.com) or Why [Actionhero is the Node.js server for when your project grows up](https://blog.evantahler.com/why-choose-actionhero-9a4b5caf4e62).
+The `Actionhero Illustrated Community Q&A` is a new project whose goal is to capture some of the best questions and answers from the Actionhero Slack group and share them with the world. For those of you who don't know, Actionhero is a [Node.js](https://medium.com/u/96cd9a1fb56) server framework focused on mutli-transport reusability, real-time chat and gaming, background jobs, etc. Actionhero includes many of the components mature digital products need out of the box so you don't have to reinvent them yourself. You can learn more about Actionhero at [www.actionherojs.com](http://www.actionherojs.com) or Why [Actionhero is the Node.js server for when your project grows up](https://blog.evantahler.com/why-choose-actionhero-9a4b5caf4e62).
 
 Actionhero has a vibrant slack community, **_which is free for anyone to join at_** [**_slack.actionherojs.com_**](https://slack.actionherojs.com/).
 
@@ -22,6 +23,8 @@ Actionhero has a vibrant slack community, **_which is free for anyone to join at
 It is a great place to ask questions and learn from other Actionhero developers, and we have a wide range of active members who are just getting started, and those that have been with the project for years. That said, Slack is not a great repository for knowledge… it can be hard to search, and even harder to know which information is stale. Also… very few people every draw illustrations or wireframes! I’m of the opinion that even a bad drawing can go a long way to explaining a technical concept. I’m a terrible illustrator, but I do know how to use Omnigraffle and tools like it! My challenge is to use the simplest tools to annotate these conversations.
 
 Every week for the month of October, I’ll be posting another article in this series which is lifted directly from our Slack community. I’m making the bet that interesting or popular conversations in Slack represent the larger community of Actionhero developers. Enjoy!
+
+---
 
 ### Actionhero for Real-time Games
 
