--- a/pages/blog/2019-10-15-online-offline-sync.mdx
+++ b/pages/blog/2019-10-15-online-offline-sync.mdx
@@ -2,7 +2,8 @@
 title: Online and Offline Sync — The Illustrated Actionhero Community Q&A
 description: Welcome to the third installment of The Illustrated Actionhero Community Q&A!
 date: "2019-10-15T16:57:43.330Z"
-tags: []
+tags: ["actionhero", "nodejs", "javascript", "typescript"]
+image: /images/medium-export/1__G93TtL608iyLjBzns6aWyA.png
 # slug: >-
 #  /@evantahler/online-and-offline-sync-the-illustrated-actionhero-community-q-a-c768513dd378
 ---
@@ -10,12 +11,6 @@ tags: []
 Welcome to the third installment of The Illustrated [Actionhero](https://www.actionherojs.com/) Community Q&A!
 
 Every week in October I’ll be publishing a conversation from the [Actionhero Slack community](http://slack.actionherojs.com/) that highlights both a feature of the Actionhero Node.JS framework and the robustness of the community’s responses… and adding some diagrams to help explain the concept.
-
-Previous articles in the series are:
-
-1.  [Why Actionhero is the Node.js server for when your project grows u](https://blog.evantahler.com/why-choose-actionhero-9a4b5caf4e62)p
-2.  [Actionhero for Real-time Games](https://blog.evantahler.com/actionhero-for-real-time-games-the-illustrated-actionhero-community-q-a-44c138e840e)
-3.  [Failing a Task](https://blog.evantahler.com/failing-a-task-the-illustrated-actionhero-community-q-a-b46b63bf5cc0)
 
 ### Online and Offline Sync
 
