--- a/pages/blog/2019-10-19-github-sponsorship.mdx
+++ b/pages/blog/2019-10-19-github-sponsorship.mdx
@@ -2,7 +2,8 @@
 title: Github Sponsorship
 description: My dream of working on Actionhero full time
 date: "2019-10-19T00:51:03.657Z"
-tags: []
+image: /images/medium-export/1__CrF__V9wBPsZJBFMzr69gQA.jpeg
+tags: ["github", "actionhero"]
 # slug: /@evantahler/github-sponsorship-afa24e52df28
 ---
 
