--- a/pages/blog/2019-10-21-actions-tasks-and-destructured-params.mdx
+++ b/pages/blog/2019-10-21-actions-tasks-and-destructured-params.mdx
@@ -1,10 +1,9 @@
 ---
-title: >-
-  Actions, Tasks, and Destructured Params- The Illustrated Actionhero Community
-  Q&A
+title: Actions, Tasks, and Destructured Params- The Illustrated Actionhero Community QA
 description: Welcome to the fourth installment of The Illustrated Actionhero Community Q&A!
 date: "2019-10-21T16:23:42.121Z"
-tags: []
+tags: ["actionhero", "javascript", "nodejs", "typescript"]
+image: /images/medium-export/1__phVzjPGTY__ky66bFEsDnEw.png
 # slug: >-
 #  /@evantahler/actions-tasks-and-destructured-params-the-illustrated-actionhero-community-q-a-a3128f41b2ee
 ---
@@ -12,13 +11,6 @@ tags: []
 Welcome to the fourth installment of The Illustrated [Actionhero](https://www.actionherojs.com/) Community Q&A!
 
 Every week in October I’ll be publishing a conversation from the [Actionhero Slack community](http://slack.actionherojs.com/) that highlights both a feature of the Actionhero Node.JS framework and the robustness of the community’s responses… and adding some diagrams to help explain the concept.
-
-Previous articles in the series are:
-
-1.  [Why Actionhero is the Node.js server for when your project grows u](https://blog.evantahler.com/why-choose-actionhero-9a4b5caf4e62)p
-2.  [Actionhero for Real-time Games](https://blog.evantahler.com/actionhero-for-real-time-games-the-illustrated-actionhero-community-q-a-44c138e840e)
-3.  [Failing a Task](https://blog.evantahler.com/failing-a-task-the-illustrated-actionhero-community-q-a-b46b63bf5cc0)
-4.  [Online and Offline Sync](https://blog.evantahler.com/online-and-offline-sync-the-illustrated-actionhero-community-q-a-c768513dd378)
 
 ### Online and Offline Sync
 
@@ -30,7 +22,7 @@ Actionhero community member Nick asks:
 
 > I’ve noticed when running the latest AH, if I destructure the data param in an action run function to `{params, response, connection}`, when I write the output to response my endpoint returns nothing, unless I do an `Object.assign()`. Is this expected behavior?
 
-After some back and forth with other members of the community
+After some back and forth with other members of the community:
 
 > …honestly I’ve seen this behavior for some time, since the move to async and ES6… I believe around AH 17
 
@@ -46,26 +38,28 @@ In both cases, we’ve set the variables `firstName` and `lastName` without havi
 
 Lets take a look at the Action in question:
 
-const {Action, api} = require('actionhero')
+```js
+const { Action, api } = require("actionhero");
 
 module.exports = class ListAvailableLessonDays extends Action {
-constructor () {
-super()
-this.name = 'ListAvailableLessonDays'
-this.description = 'Description'
-this.inputs = {
-gradeNumber: { required: true }
-}
-}
+  constructor() {
+    super();
+    this.name = "ListAvailableLessonDays";
+    this.description = "Description";
+    this.inputs = {
+      gradeNumber: { required: true },
+    };
+  }
 
-async run ({params, response}) {
-const { gradeNumber } = params;
-const { LessonService } = api.services;
-const { getAvailableLessonDays } = LessonService;
-const lessons = await getAvailableLessonDays(gradeNumber);
-response = lessons; // <-- problem!
-}
-}
+  async run({ params, response }) {
+    const { gradeNumber } = params;
+    const { LessonService } = api.services;
+    const { getAvailableLessonDays } = LessonService;
+    const lessons = await getAvailableLessonDays(gradeNumber);
+    response = lessons; // <-- problem!
+  }
+};
+```
 
 Nick is building a tool to help teachers manage their curriculums. A requestor provides a `gradeNumber` and the API then returns a list of saved lessons. They are destrucuring the input object `data` to his run method into `params` and `response`.
 
@@ -75,15 +69,18 @@ We can see the data passed into an an Action’s run method:
 
 Since Actonhero can handle connections from many different types of connections (http, websocket, direct TCP socket, etc), we need a generic way to represent the request to an action. Inside Actionhero, we have multiple types of servers responsible for handling each type of connection, and building a generic `connection` object, and figuring out what the request `parameters` (or `params` for short) are. The server is also responsible for sending the `response` of your action back to the client. To make a simple API for all of this, your actions `run` method is passed one big `data` object with everything you might need.
 
+```js
 data = {
-connection: connection,
-action: 'randomNumber',
-toProcess: true,
-toRender: true,
-messageId: 123,
-params: { action: 'randomNumber', apiVersion: 1 },
-actionStartTime: 123, response: {},
-}
+  connection: connection,
+  action: "randomNumber",
+  toProcess: true,
+  toRender: true,
+  messageId: 123,
+  params: { action: "randomNumber", apiVersion: 1 },
+  actionStartTime: 123,
+  response: {},
+};
+```
 
 To learn more about how actions work, the [Action Tutorial](https://docs.actionherojs.com/tutorial-actions.html) has a lot of great information.
 
