local featured posts

--- a/pages/blog/2017-02-28-why-choose-actionhero.mdx
+++ b/pages/blog/2017-02-28-why-choose-actionhero.mdx
@@ -2,7 +2,9 @@
 title: Why Choose Actionhero
 description: "or: Actionhero is the Node.js server for when your project grows up"
 date: "2017-02-28T00:50:03.405Z"
-tags: []
+tags: ["actionhero", "node.js", "typescript", "javascript"]
+image: /images/medium-export/1__FWU1OZyieAZc____WqiNXGrQ.png
+featured: true
 # slug: /@evantahler/why-choose-actionhero-9a4b5caf4e62
 ---
 
@@ -35,5 +37,3 @@ Actionhero proposes a standard project layout, including testing and initializer
 #### Mature Operations for a Mature business.
 
 Actionhero supports 0-downtime deployments, process signaling, and more. You can be sure that your DevOps team will find running Actionhero pleasant and clear.
-
-Do you have other reasons you love Actionhero? Let us know below!
