--- a/pages/blog/2019-03-02-the-voom-software-engineering-interview-process.mdx
+++ b/pages/blog/2019-03-02-the-voom-software-engineering-interview-process.mdx
@@ -4,7 +4,9 @@ description: >-
   Building an inclusive and efficient interview process for a pair-programming
   team
 date: "2019-03-21T00:03:45.682Z"
-tags: []
+tags: ["voom", "engineering", "engineering management", "hiring"]
+image: /images/medium-export/1__9HNP1gUTyhHlUcbJBNYpgg.jpeg
+featured: true
 # slug: /@evantahler/the-voom-software-engineering-interview-process-a93eab6518ed
 ---
 
@@ -32,9 +34,9 @@ Below are the actual emails we send to candidates along the way, followed by our
 #### Interview Step 1: Hiring Manager Meet & Greet
 
 > Hello!
-
+>
 > The goal of this first one-hour interview is to meet you, and share the company and role to you in detail. We will be explaining how we work, what our short term and long term goals are, and what you can expect on an average day. We’ll be asking you questions about your past roles, what you liked, and what you are looking to get out of your next position. We will also lightly touch on your technical skills, but this is not a technical interview.
-
+>
 > We can meet either in person at our office in Downtown Seattle, or via video call…
 
 This first meeting is very social, often conducted in a coffee or doughnut shop. This helps the conversation be more… like a real conversation! Communication is important to us and engineers at Voom interact with other people often!
@@ -48,7 +50,7 @@ If things go well, the lead interviewer will let you know on the spot and explai
 #### Interview Step 2: Pair-Programming "Clean Room" exercise
 
 > Congratulations and thank you for continuing with the Voom interview process!
-
+>
 > The goal of this interview one-hour is for a senior member of the team to get a sense of your technical abilities and experience. We will focus specifically on the tools we use (Ruby & Javascript) in a structured "clean room" pairing exercise. It will also focus on the engineering process at Voom: pair-programming & test-driven development.
 
 Now we start to get technical:
@@ -75,9 +77,9 @@ If the interviewer does not want to move forward after the interview, the proces
 #### Interview Step 3: Half Day of Pairing
 
 > Welcome to the final step of the Voom interview process!
-
+>
 > This 3-hour interview allows you to actually see what a day-in-the-life at Voom would be like. You’ll have access to our code and backlog. We believe in our work and in our process… let us show it to you! In exchange, this gives us the opportunity to see what it would be like to pair with you. We will be focusing on your comfort with TDD and pair programming, and how well you can use your existing knowledge of Rails & React to be productive in a new codebase.
-
+>
 > Our day starts at 9:30 with Stand Up, so please arrive at ~9:15 so we can get everything set up. You will pair until 12:30. Before you arrive, please sign our NDA …
 
 This is the main event. A 1/2 day of pairing; a mini-apprenticeship. Would you buy a car without a test drive? Why would you accept a job without one?
