--- a/pages/blog/2020-02-18-production-node-applications-with-docker.mdx
+++ b/pages/blog/2020-02-18-production-node-applications-with-docker.mdx
@@ -3,8 +3,7 @@ title: >-
   Production Node Applications with Docker — 3 DevOps Tips for Shutting Down
   Properly
 description: >-
-  Recently, I’ve been noticing that a high number of folks using Node Resque
-  have been reporting similar problems relating to the topics of…
+  Tips and tricks to shut down your docker applications properly.  No more lost data!
 date: "2020-02-18T04:11:19.262Z"
 tags:
   [
