--- a/pages/blog/2016-12-23-on-ethical-ad-supported-businesses.mdx
+++ b/pages/blog/2016-12-23-on-ethical-ad-supported-businesses.mdx
@@ -4,14 +4,14 @@ description: >-
   Listen to this wonderful interview on KQED (NPR)’s "Forum" with Dr. Tim Wu On
   Advertising, Fake News and ‘Attention Harvesting’
 date: "2016-12-23T19:59:19.838Z"
-tags: []
+tags: ["product management", "legal"]
+image: /images/medium-export/1__JjPI1__tSIP__7rv5N0p__v9g.png
 # slug: /@evantahler/on-ethical-ad-supported-businesses-9c449d699217
 ---
 
 Listen to this wonderful interview on KQED (NPR)’s "Forum" with Dr. Tim Wu On Advertising, Fake News and ‘Attention Harvesting’
 
-[**REBROADCAST: Tim Wu On Advertising, Fake News and 'Attention Harvesting'**
-\_Columbia Law professor Tim Wu is best known for coining the term "net neutrality" and for his research on the Internet…\_ww2.kqed.org](https://ww2.kqed.org/forum/2016/12/23/rebroadcast-tim-wu-on-advertising-fake-news-and-attention-harvesting/ "https://ww2.kqed.org/forum/2016/12/23/rebroadcast-tim-wu-on-advertising-fake-news-and-attention-harvesting/")[](https://ww2.kqed.org/forum/2016/12/23/rebroadcast-tim-wu-on-advertising-fake-news-and-attention-harvesting/)
+[**REBROADCAST: Tim Wu On Advertising, Fake News and 'Attention Harvesting'**](https://ww2.kqed.org/forum/2016/12/23/rebroadcast-tim-wu-on-advertising-fake-news-and-attention-harvesting/)
 
 Tim Wu is a professor at Colombia University who focuses on the science and history of advertising. He gives a good summary of:
 
