--- a/pages/blog/2017-06-09-elasticdump-maintinaer.mdx
+++ b/pages/blog/2017-06-09-elasticdump-maintinaer.mdx
@@ -4,7 +4,8 @@ description: >-
   There often comes a time in an open-source project’s lifecycle when the
   original maintainer needs to move on. Today, that person is me, and…
 date: "2017-06-09T01:42:59.537Z"
-tags: []
+tags: ["javascript", "elasticsearch"]
+image: /images/medium-export/1__OopZJXTgMJhT1S0pBaGapQ.jpeg
 # slug: >-
 #  /@evantahler/looking-for-a-new-elasticdump-maintainer-it-could-be-you-32a45fefb396
 ---
