--- a/pages/blog/2017-08-14-cloudflare-and-ssr-react.mdx
+++ b/pages/blog/2017-08-14-cloudflare-and-ssr-react.mdx
@@ -4,7 +4,8 @@ description: >-
   I spent a few hours today sorting out why a new React + Next.JS site was
   working great locally, but when deployed to production I was…
 date: "2017-08-14T01:05:13.352Z"
-tags: []
+tags: ["javascript", "react"]
+image: /images/medium-export/1__a__JQaj2nymx62m1RjVuGFA.png
 # slug: >-
 #  /@evantahler/cloudflare-and-server-side-react-overzealous-optimization-with-auto-minify-f59efd3fc5b8
 ---
