--- a/pages/blog/2017-10-07-actionhero-v18-async-await.mdx
+++ b/pages/blog/2017-10-07-actionhero-v18-async-await.mdx
@@ -2,7 +2,8 @@
 title: "ActionHero V18: Async/Await"
 description: Today we’ve released ActionHero v18.0.0!
 date: "2017-10-07T21:24:46.480Z"
-tags: []
+tags: ["actionhero", "javascript", "typescript"]
+image: /images/medium-export/1__CLNbk1x5u__aC__tfhY5lR__w.png
 # slug: /@evantahler/actionhero-v18-async-await-d88d369ed7b7
 ---
 
