--- a/pages/blog/2018-01-04-goodbye-scoreboard-guru.mdx
+++ b/pages/blog/2018-01-04-goodbye-scoreboard-guru.mdx
@@ -2,9 +2,12 @@
 title: Goodbye Scoreboard Guru
 description: Feb 1 Scoreboard Guru shuts down
 date: "2018-01-04T05:12:18.644Z"
-tags: []
+tags: ["games", "product management"]
+image: /images/medium-export/1__E6ZIx0OxnxDZ6dWw4o10og.png
 # slug: /@evantahler/goodbye-scoreboard-guru-40daaaf18c0d
 ---
+
+**Summary:**
 
 - **The Scoreboard Guru application is now removed from iOS App Store.**
 - **Scoreboard Guru will be shutting down on February 1st.**
@@ -25,8 +28,17 @@ As of now, no new users can download the Scoreboard Guru application, as it has 
 
 If you are interested in downloading your scores to move to another platform, you can export your data as a CSV from within the app, and it will be emailed to the address on your account. You must do this before February 1st, as that is the day the Scoreboard Guru servers will be shut down.
 
-![](/images/medium-export/1__Q56DmPPvwcZfBI7WKqpjYw.jpeg)
-![](/images/medium-export/1__9d3J6z0N5kO0ytpK85K9VQ.jpeg)
+<table>
+  <tr>
+    <td>
+      <img src="/images/medium-export/1__Q56DmPPvwcZfBI7WKqpjYw.jpeg" />
+    </td>
+    <td>
+      <img src="/images/medium-export/1__9d3J6z0N5kO0ytpK85K9VQ.jpeg" />
+    </td>
+  </tr>
+</table>
+<br />
 
 #### Refunds
 
