--- a/pages/blog/2018-06-22-customizable-other-option-in-google-forms.mdx
+++ b/pages/blog/2018-06-22-customizable-other-option-in-google-forms.mdx
@@ -2,7 +2,8 @@
 title: Customizable "Other" Option in Google Forms
 description: Hi Google!
 date: "2018-06-22T05:04:10.203Z"
-tags: []
+tags: ["product management", "voom", "accessability"]
+image: /images/medium-export/1__3rOVI36gT6fubqDUaEflhw.png
 # slug: /@evantahler/customizable-other-option-in-google-forms-2d0403f582b
 ---
 
@@ -12,9 +13,15 @@ Google Forms is a great product. It allows just about anyone (academics, compani
 
 A common use case is capturing demographic data. When asking about gender, an inclusive best practice, according to the [Human Rights Campaign](https://www.hrc.org/resources/collecting-transgender-inclusive-gender-data-in-workplace-and-other-surveys) is to provide the following options:
 
-_\*What is your Gender?\*_
+```raw
+What is your Gender Identity?
 
-\_\* Female \* Male \* Non-binary / Third Gender \* Prefer not to say \* Prefer to self-describe \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
+* Male
+* Female
+* Non-binary / Third Gender
+* Prefer not to say
+* Prefer to self-describe: ____________
+```
 
 Note how the last option is a free-form text field. One of the important things keep in mind when asking a question about _who you are_ is not to alienate anyone. Using the word "other" makes people feel… like _others_. With that in mind, check out how the following question (a radio selection with a free-text option) is displayed in a Google Form:
 
