--- a/pages/blog/2018-10-09-tips-for-building-international-products.mdx
+++ b/pages/blog/2018-10-09-tips-for-building-international-products.mdx
@@ -4,7 +4,8 @@ description: >-
   Voom is an Airbus subsidiary working to make booking a helicopter as easy as
   booking a car… while we build out the infrastructure for the…
 date: "2018-10-09T01:07:17.646Z"
-tags: []
+tags: ["voom", "product management"]
+image: /images/medium-export/1__kPialmqAJFyZG3FCt1JC__A.jpeg
 # slug: >-
 #  /@evantahler/tips-for-building-international-products-and-companies-f800f96b9c31
 ---
@@ -44,9 +45,19 @@ Imagine you are a Mexican traveler, at home in Mexico City, planning a trip to S
 
 Initially, when we launched Voom, we made the choice that we should focus the Rider’s experience on "Voom’s closest active region to where they currently are." However, we learned that over 1/3 of Voom’s customers are international travelers so that quickly proved to be the wrong approach. Our Mexican traveler would have seen helipads in her city, rather than in São Paulo, and her flight times would be in the wrong timezone!
 
-![](/images/medium-export/1__t8WarXboKiVGmOrTsa0fdw.png)
-![](/images/medium-export/1__tJhdHEGzQrrvTrFRNn2Z__A.png)
-![](/images/medium-export/1__9kfOtic0EBtld0n5L8yEEw.png)
+<table>
+  <tr>
+    <td>
+      <img src="/images/medium-export/1__t8WarXboKiVGmOrTsa0fdw.png" />
+    </td>
+    <td>
+      <img src="/images/medium-export/1__tJhdHEGzQrrvTrFRNn2Z__A.png" />
+    </td>
+    <td>
+      <img src="/images/medium-export/1__9kfOtic0EBtld0n5L8yEEw.png" />
+    </td>
+  </tr>
+</table>
 
 **Below are the the product principals we use now to address the aforementioned issue:**
 
