--- a/pages/blog/2018-12-31-repeat-rate.mdx
+++ b/pages/blog/2018-12-31-repeat-rate.mdx
@@ -2,7 +2,8 @@
 title: "Repeat Rate: What are you Actually Measuring?"
 description: Second-Order Measurements and your Product
 date: "2018-12-31T18:46:35.181Z"
-tags: []
+tags: ["product management", "voom"]
+image: /images/medium-export/1__XYGVsmFM9b0lnRDHJHfOyQ.jpeg
 # slug: /@evantahler/repeat-rate-what-are-you-actually-measuring-ddc3ad49ba04
 ---
 
@@ -24,15 +25,17 @@ _For illustrative purposes, we can simplify things and assume Voom only sells 1 
 
 **January 2018:**
 
+```raw
 Customers Acquired (2 total) \* Evan \* Christina
-
 Journeys Purchased this month (10 total by 2 possible customers) \* Evan: 1 \* Christina: 9
+```
 
 **February 2018:**
 
+```raw
 Customers Acquired (1 total) \* Megan
-
 Journeys Purchased this month(3 total by 3 possible customers) \* Christina: 2 \* Evan: 0 \* Megan: 1
+```
 
 #### Repeat Rate Option 1: Cohort Performance over Time
 
