--- a/pages/blog/2019-01-08-controlling-your-magic-painting-with-your-words.mdx
+++ b/pages/blog/2019-01-08-controlling-your-magic-painting-with-your-words.mdx
@@ -1,14 +1,15 @@
 ---
-title: Controlling your Magic Painting with your mind
+title: Controlling your Magic Painting with your words
 description: >-
   Or, how to control your Meural Canvas with the API and connect it to all the
   things!
 date: "2019-01-08T03:44:49.973Z"
-tags: []
+tags: ["meural", "node.js", "javascript"]
+image: /images/medium-export/1__yLVPs76k5HvU5iULe45maw.jpeg
 # slug: /@evantahler/controlling-your-magic-painting-with-your-mind-9f476c7c8225
 ---
 
-_Or, how to control your_ [_Meural_](https://www.meural.com/) _Canvas with the API and connect it to all the things!_
+> Or, how to control your\* [Meural](https://www.meural.com/) Canvas with the API and connect it to all the things!
 
 For years, I have been threatening to build a "Hogwarts Style" live painting for my apartment. I’ve been following the price of [e-ink full color displays](https://www.eink.com/color-technology.html) for years, and we were getting close to the point where spending a few thousand dollars was almost seaming reasonable...
 
